# vkTestProj

./: .dir-local.el  CMakeLists.txt  README.md  build.sh  ccls_backup  complie_commands.json
Examples/: .dir-locals.el  CMakeLists.txt
Examples/Basic/: CMakeLists.txt  basic_main.cpp  basic_scene.cpp  basic_scene.h
Examples/Light/: .#light_main.cpp  CMakeLists.txt  LightScene.cpp  LightScene.h  light_main.cpp
Examples/PolyShape/: .dir-locals.el  CMakeLists.txt  PolyScene.cpp  PolyScene.h  PolyShape.cpp  PolyShape.h  main.cpp
Examples/Triangle/: CMakeLists.txt  main.cpp  main_scene.cpp  main_scene.h  renderpass.cpp  renderpass.h
Json/: basic_pipeline.json  basic_pipeline_0.json  first_pipeline.json  light_pipeline.json  multiRenderpass.json  renderpass.json  renderpass_0.json  vkConfig.json  vkFormat.json
ShaderSrc/: basic_frag.frag  basic_frag_0.frag  basic_vert.vert  basic_vert_0.vert  frag_fst.frag  light_frag.frag  light_vert.vert  spvire.sh  vert_fst.vert  vertice.vert
include/: TKEngine.h  TKPrefix.h
include/Base/: TKBaseInfo.h  TKJsonPipeline.h  TKPipeline.h  TKPipelineManager.h  TKScene.h  TKShaderModule.h  TKVkBase.h  TKWindow.h
include/Math/: TKCamera.h  TKMath.h  TKRay.h
include/Node/: TKBaseNode.h  TKCamera.h  TKFbxNode.h  TKGeometryObj.h
linux/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
linux/Examples/: Makefile  cmake_install.cmake
linux/Examples/Basic/: Makefile  basic  cmake_install.cmake
linux/Examples/Light/: Makefile  light
linux/src/: Makefile  cmake_install.cmake
linux/src/Base/: Makefile
linux/src/Math/: Makefile  cmake_install.cmake
linux/src/Node/: Makefile  cmake_install.cmake
spv/: basic_frag.spv  basic_frag_0.spv  basic_vert.spv  basic_vert_0.spv  frag_fst.spv  light_frag.spv  light_vert.spv  vert_fst.spv
src/: CMakeLists.txt  TKEngine.h  TKEngine.hpp  TKPrefix.h
src/.ccls-cache/@@home@sky@Github@vkTestProj@src/: @usr@include@features.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@wordsize.h.blob  @usr@include@x86_64-linux-gnu@gnu@stubs-64.h.blob  @usr@include@x86_64-linux-gnu@gnu@stubs.h.blob  @usr@include@x86_64-linux-gnu@sys@cdefs.h.blob
src/.ccls-cache/@home@sky@Github@vkTestProj@src/: Base@TKBaseInfo.h  Base@TKBaseInfo.h.blob  TKPrefix.h  TKPrefix.h.blob
src/Base/: .#TKBaseInfo.cpp  .#TKScene.cpp  CMakeLists.txt  TKBaseInfo.cpp  TKBaseInfo.h  TKFramebuffer.h  TKImageView.cpp  TKImageView.h  TKJsonPipeline.cpp  TKJsonPipeline.h  TKPipeline.cpp  TKPipelineLayout.cpp  TKPipelineLayout.h  TKPipelineManager.cpp  TKRenderPass.cpp  TKRenderPass.h  TKScene.cpp  TKScene.h  TKShaderModule.cpp  TKShaderModule.h  TKUniform.cpp  TKUniform.h  TKVkBase.h  TKVkUtility.cpp  TKVkUtility.h  TKWindow.cpp  TKWindow.h
src/Math/: CMakeLists.txt  TKCamera.cpp  TKCamera.h  TKDataType.cpp  TKVector.h  test.cpp
src/Node/: CMakeLists.txt  TKBaseNode.cpp  TKBaseNode.h  TKCamera.h  TKFbxNode.cpp  TKGeometryObj.cpp  TKGeometryObj.h  TKObject.cpp  TKPrefix.h
src/Node/Math/: TKComplex.cpp  TKComplex.h  TKDataType.cpp  TKDataType.h  TKExecption.h  TKMatrix.cpp  TKMatrix.h  TKVector.cpp
src/Node/Node/: TKDataDef.h  TKObject.h
